fix anchor berita

--- a/berita.html
+++ b/berita.html
@@ -96,7 +96,8 @@
             <h1>Berita</h1>
         </div>
         <div style="flex-basis: 100%;">
-            <h2 class="underlined head2" id="sekolah">Berita Sekolah</h2>
+            <span id="sekolah" style="position: relative; top: -100px;"></span>
+            <h2 class="underlined head2">Berita Sekolah</h2>
             <div class="row" style="padding-left: 0; padding-right: 0;">
                 <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
                     <img src="img/pexels-lukas-574069.jpg" alt="" class="img-box">
@@ -132,7 +133,8 @@
     </div>
     <div class="row">
         <div>
-            <h2 class="underlined head2" id="pendidikan">Berita Pendidikan</h2>
+            <span id="pendidikan" style="position: relative; top: -100px;"></span>
+            <h2 class="underlined head2">Berita Pendidikan</h2>
             <div class="row" style="padding-left: 0; padding-right: 0;">
                 <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
                     <img src="img/pexels-christina-morillo-1181346.jpg" alt="" class="img-box">
