update peta dan galeri fix anchor

--- a/galeri.html
+++ b/galeri.html
@@ -99,83 +99,83 @@
             <span id="foto" style="position: relative; top: -100px;"></span>
             <h2 class="underlined head2">Galeri Foto</h2>
             <div class="row" style="padding-left: 0; padding-right: 0;">
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img1"><img src="img/pexels-idriss-meliani-2982449.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Gedung SMK Sains Pertiwi</p>
                     </a>
-                    <a href="#" class="lightbox" id="img1">
+                    <a href="#menu" class="lightbox" id="img1">
                         <span style="background-image: url('img/pexels-idriss-meliani-2982449.jpg')"></span>
                     </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img2"><img src="img/pexels-pixabay-256395.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Ruang Kelas</p>
                     </a>
-                    <a href="#" class="lightbox" id="img2">
+                    <a href="#menu" class="lightbox" id="img2">
                         <span style="background-image: url('img/pexels-pixabay-256395.jpg')"></span>
                     </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img3"><img src="img/pexels-pixabay-207691.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Ruang Aula 1</p>
                     </a>
-                    <a href="#" class="lightbox" id="img3">
+                    <a href="#menu" class="lightbox" id="img3">
                         <span style="background-image: url('img/pexels-pixabay-207691.jpg')"></span>
                     </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img4"><img src="img/pexels-katerina-holmes-5905445.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Ruang Kelas</p>
                     </a>
-                    <a href="#" class="lightbox" id="img4">
+                    <a href="#menu" class="lightbox" id="img4">
                         <span style="background-image: url('img/pexels-katerina-holmes-5905445.jpg')"></span>
                     </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img5"><img src="img/pexels-pavel-danilyuk-7234414.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Ruang Multimedia</p>
                     </a>
-                    <a href="#" class="lightbox" id="img5">
+                    <a href="#menu" class="lightbox" id="img5">
                         <span style="background-image: url('img/pexels-pavel-danilyuk-7234414.jpg')"></span>
                     </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img6"><img src="img/pexels-kindel-media-8688143.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Kolam Renang</p>
                     </a>
-                    <a href="#" class="lightbox" id="img6">
+                    <a href="#menu" class="lightbox" id="img6">
                         <span style="background-image: url('img/pexels-kindel-media-8688143.jpg')"></span>
                     </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img7"><img src="img/pexels-maria-orlova-4946389.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Indoor Sports Hall</p>
                     </a>
-                    <a href="#" class="lightbox" id="img7">
+                    <a href="#menu" class="lightbox" id="img7">
                         <span style="background-image: url('img/pexels-maria-orlova-4946389.jpg')"></span>
                     </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img8"><img src="img/pexels-pixabay-267507.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Computer Lab</p>
                     </a>
-                    <a href="#" class="lightbox" id="img8">
+                    <a href="#menu" class="lightbox" id="img8">
                         <span style="background-image: url('img/pexels-pixabay-267507.jpg')"></span>
                     </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img9"><img src="img/pexels-element-digital-1370296.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Perpustakaan</p>
                     </a>
-                    <a href="#" class="lightbox" id="img9">
+                    <a href="#menu" class="lightbox" id="img9">
                         <span style="background-image: url('img/pexels-element-digital-1370296.jpg')"></span>
                     </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                <div style="flex-basis: 20%; text-align: left;">
                     <a href="#img10"><img src="img/pexels-maggie-zhan-2170498.jpg" alt="" class="img-box">
                         <p style="margin-bottom: 0px; text-align: center;">Gedung Utama</p>
                     </a>
-                    <a href="#" class="lightbox" id="img10">
+                    <a href="#menu" class="lightbox" id="img10">
                         <span style="background-image: url('img/pexels-maggie-zhan-2170498.jpg')"></span>
                     </a>
                 </div>
