--- a/profil.html
+++ b/profil.html
@@ -271,6 +271,14 @@
             <span id="peta" style="position: relative; top: -100px;"></span>
             <h2 class="underlined head2">Peta Sekolah</h2>
         </div>
+        <div style="flex-basis: 20%; text-align: left;">
+            <a href="#img1"><img src="img/peta sekolah.jpg" alt="" class="img-box">
+                <p style="margin-bottom: 0px; text-align: center;">Denah SMK Sains Pertiwi</p>
+            </a>
+            <a href="#menu" class="lightbox" id="img1">
+                <span style="background-image: url('img/peta sekolah.jpg')"></span>
+            </a>
+        </div>
     </div>
     <div class="row footer">
         <div style="flex-basis: 30%;">
