update page keahlian

--- a/keahlian.html
+++ b/keahlian.html
@@ -135,7 +135,6 @@
         <div style="flex-basis: 30%;">
             <img src="img/pexels-lukas-574069.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
-        
     </div>
     <div class="row row-spaced">
         <div style="flex-basis: 100%;">
@@ -161,6 +160,24 @@
         <div style="flex-basis: 30%;">
             <img src="img/pexels-alexander-dummer-132700.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
+        <div style="flex-basis: 30%;">
+            <img src="img/pexels-quang-nguyen-vinh-2136243.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
+        </div>
+        <div style="flex-basis: 40%; text-align: left;">
+            <h3>Prospek pekerjaan lulusan Teknik Elektronika Industri</h3>
+            <p>
+            <ol style="padding-left: 15px; text-align: left;">
+                <li>Industri Telekomunikasi</li>
+                <li>Industri Minyak Dan Gas</li>
+                <li>Industri Manufaktur</li>
+                <li>Industri Otomotif</li>
+                <li>Industri Pembangkit Listrik</li>
+                <li>Tenaga Pendidik</li>
+                <li>Ahli Robotik</li>
+                <li>Wirausaha</li>
+            </ol>
+            </p>
+        </div>
     </div>
     <div class="row row-spaced">
         <div style="flex-basis: 100%;">
@@ -182,6 +199,23 @@
                 <li>Teknik Fabrikasi Logam dan Manufaktur</li>
             </ol>
             </p>
+        </div>
+        <div style="flex-basis: 40%; text-align: left;">
+            <h3>Prospek pekerjaan lulusan Teknik Mesin</h3>
+            <p>
+            <ol style="padding-left: 15px; text-align: left;">
+                <li>Teknisi Fabrikasi</li>
+                <li>Operator Mesin Perkakas</li>
+                <li>Injection Molding Setter</li>
+                <li>Staff Produksi</li>
+                <li>Teknisi Crane</li>
+                <li>Petugas Pemeliharaan Kabel Listrik</li>
+                <li>Pengusaha di Bidang Mesin</li>
+            </ol>
+            </p>
+        </div>
+        <div style="flex-basis: 30%;">
+            <img src="img/pexels-kateryna-babaieva-2760243.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
     </div>
     <div class="row row-spaced">
@@ -208,6 +242,23 @@
         <div style="flex-basis: 30%;">
             <img src="img/pexels-startup-stock-photos-7375.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
+        <div style="flex-basis: 30%;">
+            <img src="img/pexels-hitesh-choudhary-340152.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
+        </div>
+        <div style="flex-basis: 40%; text-align: left;">
+            <h3>Prospek pekerjaan lulusan Sistem Informasi</h3>
+            <p>
+            <ol style="padding-left: 15px; text-align: left;">
+                <li>Data Analyst</li>
+                <li>Data Scientist</li>
+                <li>Computer Engineering</li>
+                <li>Software Developer</li>
+                <li>ERP Consultant</li>
+                <li>UI/UX Developer</li>
+                <li>Wirausaha</li>
+            </ol>
+            </p>
+        </div>
     </div>
     <div class="row row-spaced">
         <div style="flex-basis: 100%;">
@@ -231,6 +282,21 @@
                 <li>Produk Kreatif dan Kewirausahaan</li>
             </ol>
             </p>
+        </div>
+        <div style="flex-basis: 40%; text-align: left;">
+            <h3>Prospek pekerjaan lulusan Teknik Otomasi Industri</h3>
+            <p>
+            <ol style="padding-left: 15px; text-align: left;">
+                <li>Automation Engineer</li>
+                <li>Programmer</li>
+                <li>Maintenance Engineer</li>
+                <li>Sales and Application Engineer</li>
+                <li>Wirausaha</li>
+            </ol>
+            </p>
+        </div>
+        <div style="flex-basis: 30%;">
+            <img src="img/pexels-kateryna-babaieva-2760243.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
     </div>
     <div class="row row-spaced">
@@ -256,6 +322,19 @@
         <div style="flex-basis: 30%;">
             <img src="img/pexels-sergei-a-2539462.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
+        <div style="flex-basis: 30%;">
+            <img src="img/pexels-hitesh-choudhary-340152.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
+        </div>
+        <div style="flex-basis: 40%; text-align: left;">
+            <h3>Prospek pekerjaan lulusan Teknik Pendingin & Tata Udara</h3>
+            <p>
+            <ol style="padding-left: 15px; text-align: left;">
+                <li>Karyawan pada Perusahaan Teknik Pendingin</li>
+                <li>Karyawan pada Perusahaan Umum</li>
+                <li>Wirausaha</li>
+            </ol>
+            </p>
+        </div>
     </div>
     <div class="row row-spaced">
         <div style="flex-basis: 100%;">
@@ -279,6 +358,24 @@
                 <li>Produk Kreatif dan Kewirausahaan</li>
             </ol>
             </p>
+        </div>
+        <div style="flex-basis: 40%; text-align: left;">
+            <h3>Prospek pekerjaan lulusan Teknik Mekatronika</h3>
+            <p>
+            <ol style="padding-left: 15px; text-align: left;">
+                <li>Perusahaan Tambang</li>
+                <li>Perusahaan Bidang Mesin Industri</li>
+                <li>Industri Otomotif</li>
+                <li>Perusahaan Alat Medis</li>
+                <li>Desainer Mesin</li>
+                <li>Perusahaan Elektronik</li>
+                <li>Maintenance Pabrik Mesin</li>
+                <li>Industri Farmasi</li>
+            </ol>
+            </p>
+        </div>
+        <div style="flex-basis: 30%;">
+            <img src="img/pexels-tom-fisk-2101137.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
     </div>
     <div class="row row-spaced">
@@ -306,6 +403,24 @@
         </div>
         <div style="flex-basis: 30%;">
             <img src="img/pexels-minh-tri-8799982.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
+        </div>
+        <div style="flex-basis: 30%;">
+            <img src="img/pexels-hitesh-choudhary-340152.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
+        </div>
+        <div style="flex-basis: 40%; text-align: left;">
+            <h3>Prospek pekerjaan lulusan Produksi Film & Program Televisi</h3>
+            <p>
+            <ol style="padding-left: 15px; text-align: left;">
+                <li>Sutradara</li>
+                <li>Penulis Naskah</li>
+                <li>Produser TV / Film / Video</li>
+                <li>Operator Kamera untuk Televisi, Video, dan Film</li>
+                <li>Editor Film dan Video</li>
+                <li>Teknisi Suara</li>
+                <li>Teknisi Perlengkapan Kamera dan Fotografi</li>
+                <li>Wirausaha</li>
+            </ol>
+            </p>
         </div>
     </div>
     <div class="row footer">
