--- a/keahlian.html
+++ b/keahlian.html
@@ -62,11 +62,8 @@
                         <a href="#menu" class="dropbtn"><b>Kegiatan Sekolah</b></a>
                         <div class="dropdown-content">
                             <a href="kegiatan.html#kalender">Kalender Akademik</a>
-                            <a href="kegiatan.html#bursa">Bursa Kerja</a>
                             <a href="kegiatan.html#ppdb">PPDB</a>
-                            <a href="kegiatan.html#si">Sistem Informasi</a>
                             <a href="kegiatan.html#ekstra">Ekstrakulikuler</a>
-                            <a href="kegiatan.html#laporan">Laporan Kegiatan Sekolah</a>
                         </div>
                     </li>
                     <li class="dropdown">
@@ -260,6 +257,14 @@
             </p>
         </div>
     </div>
+    <div class="row">
+        <div class="row block-dark cta-block">
+            <div class="cta-fill">
+                <h2>Pendaftaran Peserta Didik Baru segera dibuka</h2>
+            </div>
+            <div class="cta-fill"><button class="button button-white" onclick="location.href='kegiatan.html#ppdb';">Lihat Informasi PPDB</button></div>
+        </div>
+    </div>
     <div class="row row-spaced">
         <div style="flex-basis: 100%;">
             <span id="otomasi" style="position: relative; top: -100px;"></span>
@@ -378,7 +383,7 @@
             <img src="img/pexels-tom-fisk-2101137.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
     </div>
-    <div class="row row-spaced">
+    <div class="row row-spaced ornament-up">
         <div style="flex-basis: 100%;">
             <span id="film" style="position: relative; top: -100px;"></span>
             <h2 class="underlined head2">Produksi Film & Program Televisi</h2>
@@ -432,7 +437,7 @@
             <p>Email: <a href="mailto:inbox@smksainspertiwi.ac.id" class="footerlink">inbox@smksainspertiwi.ac.id</a>
             </p>
         </div>
-        <div>
+        <div style="flex-basis: 20%;">
             <h2>Navigasi</h2>
             <ul>
                 <li><a href="index.html" class="footerlink">Home</a></li>
@@ -445,7 +450,7 @@
                 <li><a href="kontak.html" class="footerlink">Kontak</a></li>
             </ul>
         </div>
-        <div>
+        <div style="flex-basis: 20%;">
             <h2>Social Media</h2>
             <ul>
                 <li><a href="https://facebook.com" class="footerlink" target="_blank"><i
@@ -454,7 +459,12 @@
                             class="fa-brands fa-instagram"></i> @sains_pertiwi</a></li>
                 <li><a href="https://twitter.com" class="footerlink" target="_blank"><i
                             class="fa-brands fa-twitter"></i> @sains_pertiwi</a></li>
+                <li><a href="https://youtube.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-youtube"></i> SMK Sains Pertiwi</a></li>
             </ul>
+        </div>
+        <div style="flex-basis: 100%;">
+            <p style="text-align: center;">Dibuat oleh <a href="kelompok1.html" style="color: #F18F01;">Kelompok 1</a> Web Programming Kelas 12.2B.31.</p>
         </div>
     </div>
 </body>
