--- a/kelompok1.html
+++ b/kelompok1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kegiatan - SMK Sains Pertiwi</title>
+    <title>SMK Sains Pertiwi - Home</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -88,56 +88,24 @@
             </nav>
         </header>
     </div>
-    <div class="row first-row" style="background: linear-gradient(to top, #030111, #ffffff00),
-    url(img/pexels-idriss-meliani-2982449.jpg) no-repeat center center;">
+    <div class="row first-row ornament-up" style="min-height: 80vh;">
         <div style="flex-basis: 100%;">
-            <h1 class="white">Kegiatan Sekolah</h1>
+            <h1>Kelompok 1</h1>
+            <h1>Mata Kuliah Web Programming 1</h1>
+            <h3>Kelas 12.2B.31</h3>
+            <h3>UBSI Dewi Sartika</h3>
+            <p style="text-align: left;">
+                <ul style="text-align: center;">
+                    <li>Kossa Ridho Utomo / 12210472</li>
+                    <li>Esha Indra S / 12210408</li>
+                    <li>Dwi Ariyani / 12211496</li>
+                    <li>Hearly Ramadhan / 12211509</li>
+                    <li>Riki Ardhianto / 12211547</li>
+                </ul>
+            </p>
         </div>
-    </div>
-    <div class="row">
-        <div style="flex-basis: 100%;">
-            <span id="kalender" style="position: relative; top: -100px;"></span>
-            <h2 class="underlined head2">Kalender Akademik</h2>
-        </div>
-        <div style="flex-basis: 20%;">
-            <a href="#img1"><img src="img/kalender-akademik.png" alt="" class="img-box">
-                <p style="margin-bottom: 0px; text-align: center;">Kalender Akademik Tahun Pelajaran 2021/2022</p>
-            </a>
-            <a href="#menu" class="lightbox" id="img1">
-                <span style="background-image: url('img/kalender-akademik.png')"></span>
-            </a>
-        </div>
-        
-    </div>
-    <div class="row">
-        <div style="flex-basis: 100%;">
-            <span id="ppdb" style="position: relative; top: -100px;"></span>
-            <h2 class="underlined head2">PPDB</h2>
-        </div>
-    </div>
-    <div class="row">
-        <div style="flex-basis: 50%;">
-            <span id="ekstra" style="position: relative; top: -100px;"></span>
-            <h2 class="underlined head2">Ekstrakulikuler</h2>
-            <p class="under-header">Terdapat kurang lebih 16 Ekstrakulikuler yang berada di SMK Sains Pertiwi</p>
-            <ul style="padding-left: 15px; list-style-type: disc; text-align: left;">
-                <li>Paskibra</li>
-                <li>Palang Merah Remaja (PMR)</li>
-                <li>Pramuka</li>
-                <li>Pecinta Alam (PA)</li>
-                <li>Bola Basket</li>
-                <li>Futsal</li>
-                <li>Renang</li>
-                <li>Bulutangkis</li>
-                <li>Pencak Silat Merpati Putih</li>
-                <li>Taekwondo</li>
-                <li>English Club</li>
-                <li>Science Club</li>
-                <li>Math Club</li>
-                <li>Bahasa Jepang</li>
-                <li>Rohis</li>
-                <li>Rohkris</li>
-            </ul>
+        <div>
+            <p>Gambar pada web ini diambil dari <a href="https://www.pexels.com/">pexels.com</a> dan <a href="https://generated.photos/">generated.photos</a>.<br>Hak cipta ada pada kreator.</p>
         </div>
     </div>
     <div class="row footer">
