--- a/program.html
+++ b/program.html
@@ -62,11 +62,8 @@
                         <a href="#menu" class="dropbtn"><b>Kegiatan Sekolah</b></a>
                         <div class="dropdown-content">
                             <a href="kegiatan.html#kalender">Kalender Akademik</a>
-                            <a href="kegiatan.html#bursa">Bursa Kerja</a>
                             <a href="kegiatan.html#ppdb">PPDB</a>
-                            <a href="kegiatan.html#si">Sistem Informasi</a>
                             <a href="kegiatan.html#ekstra">Ekstrakulikuler</a>
-                            <a href="kegiatan.html#laporan">Laporan Kegiatan Sekolah</a>
                         </div>
                     </li>
                     <li class="dropdown">
@@ -165,7 +162,7 @@
             <img src="img/pexels-klub-boks-8884286.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
     </div>
-    <div class="row">
+    <div class="row ornament-up">
         <div style="flex-basis: 100%;">
             <span id="bussiness" style="position: relative; top: -100px;"></span>
             <h2 class="underlined head2">Program Bussiness Center</h2>
@@ -201,7 +198,7 @@
             <p>Email: <a href="mailto:inbox@smksainspertiwi.ac.id" class="footerlink">inbox@smksainspertiwi.ac.id</a>
             </p>
         </div>
-        <div>
+        <div style="flex-basis: 20%;">
             <h2>Navigasi</h2>
             <ul>
                 <li><a href="index.html" class="footerlink">Home</a></li>
@@ -214,7 +211,7 @@
                 <li><a href="kontak.html" class="footerlink">Kontak</a></li>
             </ul>
         </div>
-        <div>
+        <div style="flex-basis: 20%;">
             <h2>Social Media</h2>
             <ul>
                 <li><a href="https://facebook.com" class="footerlink" target="_blank"><i
@@ -223,7 +220,12 @@
                             class="fa-brands fa-instagram"></i> @sains_pertiwi</a></li>
                 <li><a href="https://twitter.com" class="footerlink" target="_blank"><i
                             class="fa-brands fa-twitter"></i> @sains_pertiwi</a></li>
+                <li><a href="https://youtube.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-youtube"></i> SMK Sains Pertiwi</a></li>
             </ul>
+        </div>
+        <div style="flex-basis: 100%;">
+            <p style="text-align: center;">Dibuat oleh <a href="kelompok1.html" style="color: #F18F01;">Kelompok 1</a> Web Programming Kelas 12.2B.31.</p>
         </div>
     </div>
 </body>
