--- a/template.html
+++ b/template.html
@@ -16,8 +16,10 @@
 <body>
     <div class="header-container">
         <header class="header">
-            <a href="index.html"><img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="40px" class="logo">
-            <h1 class="title" style="color: white;">SMK Sains Pertiwi</h1></a>
+            <a href="index.html"><img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="40px"
+                    class="logo">
+                <h1 class="title" style="color: white;">SMK Sains Pertiwi</h1>
+            </a>
             <!-- Hamburger icon -->
             <input class="side-menu" type="checkbox" id="side-menu" />
             <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
@@ -60,11 +62,8 @@
                         <a href="#menu" class="dropbtn"><b>Kegiatan Sekolah</b></a>
                         <div class="dropdown-content">
                             <a href="kegiatan.html#kalender">Kalender Akademik</a>
-                            <a href="kegiatan.html#bursa">Bursa Kerja</a>
                             <a href="kegiatan.html#ppdb">PPDB</a>
-                            <a href="kegiatan.html#si">Sistem Informasi</a>
                             <a href="kegiatan.html#ekstra">Ekstrakulikuler</a>
-                            <a href="kegiatan.html#laporan">Laporan Kegiatan Sekolah</a>
                         </div>
                     </li>
                     <li class="dropdown">
@@ -83,7 +82,8 @@
                     </li>
                     <li class="dropdown"><a href="kontak.html" class="dropbtn"><b>Kontak</b></a></li>
                     <li class="dropdown ppdb-mobile"><a href="kegiatan.html#ppdb" class="dropbtn"><b>PPDB</b></a></li>
-                    <li><button class="button button-header dropbtn" onclick="location.href='kegiatan.html#ppdb';">PPDB</button></li>
+                    <li><button class="button button-header dropbtn"
+                            onclick="location.href='kegiatan.html#ppdb';">PPDB</button></li>
                 </ul>
             </nav>
         </header>
@@ -97,7 +97,7 @@
             <p>Email: <a href="mailto:inbox@smksainspertiwi.ac.id" class="footerlink">inbox@smksainspertiwi.ac.id</a>
             </p>
         </div>
-        <div>
+        <div style="flex-basis: 20%;">
             <h2>Navigasi</h2>
             <ul>
                 <li><a href="index.html" class="footerlink">Home</a></li>
@@ -110,13 +110,21 @@
                 <li><a href="kontak.html" class="footerlink">Kontak</a></li>
             </ul>
         </div>
-        <div>
+        <div style="flex-basis: 20%;">
             <h2>Social Media</h2>
             <ul>
-                <li><a href="https://facebook.com" class="footerlink" target="_blank"><i class="fa-brands fa-facebook"></i> SMK Sains Pertiwi</a></li>
-                <li><a href="https://instagram.com" class="footerlink" target="_blank"><i class="fa-brands fa-instagram"></i> @sains_pertiwi</a></li>
-                <li><a href="https://twitter.com" class="footerlink" target="_blank"><i class="fa-brands fa-twitter"></i> @sains_pertiwi</a></li>
+                <li><a href="https://facebook.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-facebook"></i> SMK Sains Pertiwi</a></li>
+                <li><a href="https://instagram.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-instagram"></i> @sains_pertiwi</a></li>
+                <li><a href="https://twitter.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-twitter"></i> @sains_pertiwi</a></li>
+                <li><a href="https://youtube.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-youtube"></i> SMK Sains Pertiwi</a></li>
             </ul>
+        </div>
+        <div style="flex-basis: 100%;">
+            <p style="text-align: center;">Dibuat oleh <a href="kelompok1.html" style="color: #F18F01;">Kelompok 1</a> Web Programming Kelas 12.2B.31.</p>
         </div>
     </div>
 </body>
