--- a/keahlian.html
+++ b/keahlian.html
@@ -89,7 +89,7 @@
         </header>
     </div>
     <div class="row first-row" style="background: linear-gradient(to top, #030111, #ffffff00),
-    url(img/pexels-idriss-meliani-2982449.jpg) no-repeat center center;">
+    url(img/pexels-pixabay-267507.jpg) no-repeat center center; background-size: cover;">
         <div style="flex-basis: 100%;">
             <h1 class="white">Program Keahlian SMK Sains Pertiwi</h1>
         </div>
@@ -383,7 +383,7 @@
             <img src="img/pexels-tom-fisk-2101137.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
     </div>
-    <div class="row row-spaced ornament-up">
+    <div class="row row-spaced">
         <div style="flex-basis: 100%;">
             <span id="film" style="position: relative; top: -100px;"></span>
             <h2 class="underlined head2">Produksi Film & Program Televisi</h2>
@@ -410,7 +410,7 @@
             <img src="img/pexels-minh-tri-8799982.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
         <div style="flex-basis: 30%;">
-            <img src="img/pexels-hitesh-choudhary-340152.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
+            <img src="img/pexels-pixabay-159400.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
         </div>
         <div style="flex-basis: 40%; text-align: left;">
             <h3>Prospek pekerjaan lulusan Produksi Film & Program Televisi</h3>
