--- a/kegiatan.html
+++ b/kegiatan.html
@@ -89,7 +89,7 @@
         </header>
     </div>
     <div class="row first-row" style="background: linear-gradient(to top, #030111, #ffffff00),
-    url(img/pexels-idriss-meliani-2982449.jpg) no-repeat center center;">
+    url(img/pexels-cottonbro-6208699.jpg) no-repeat bottom center; background-size: cover;">
         <div style="flex-basis: 100%;">
             <h1 class="white">Kegiatan Sekolah</h1>
         </div>
@@ -107,19 +107,52 @@
                 <span style="background-image: url('img/kalender-akademik.png')"></span>
             </a>
         </div>
-        
+
     </div>
-    <div class="row">
+    <div class="row section-dark ornament-up">
         <div style="flex-basis: 100%;">
             <span id="ppdb" style="position: relative; top: -100px;"></span>
-            <h2 class="underlined head2">PPDB</h2>
+            <h2 class="underlined">PPDB</h2>
+        </div>
+        <div class="block-light2" style="flex-basis: 40%; text-align: left; padding: 30px;">
+            <h3>Alur pendaftaran bagi calon peserta didik baru</h3>
+            <ol style="padding-left: 20px;">
+                <li>Menyiapkan berkas pendaftaran</li>
+                <li>Mengakses laman situs PPD online (<a
+                        href="https://ppdb.jakarta.go.id/">https://ppdb.jakarta.go.id/</a>)</li>
+                <li>Mengisi formulir ajuan akun dan melakukan aktivasi secara online</li>
+                <li>Login menggunakan nomor peserta berupa NISN dan password</li>
+                <li>Mengunggah atau mengupload dokumen persyaratan</li>
+                <li>Melakukan verifikasi dokumen di SMA/SMK terdekat</li>
+                <li>Melakukan pemilihan sekolah</li>
+                <li>Mencetak tanda bukti pendaftaran</li>
+                <li>Melihat hasil seleksi dan pengumuman secara online di laman situs PPDB online (<a
+                        href="https://ppdb.jakarta.go.id/">https://ppdb.jakarta.go.id/</a>)</li>
+            </ol>
+        </div>
+        <div class="block-light2" style="flex-basis: 40%; text-align: left; padding: 30px;">
+            <h3>Timeline PPDB</h3>
+            <ul style="padding-left: 25px; list-style: disc;">
+                <li><b>18 Mei 2022</b><br>Penetapan Zonasi di SMA/SMK DKI Jakarta</li>
+                <li><b>10 Juni 2022</b><br>Pengumuman pembukaan PPDB 2022/2023</li>
+                <li><b>15-28 Juni 2022</b><br>Pengajuan akun di laman <a
+                    href="https://ppdb.jakarta.go.id/">https://ppdb.jakarta.go.id/</a>.<br>Verifikasi berkas di SMA/SMK terdekat.</li>
+                <li><b>29 Juni-01 Juli 2022</b><br>Pendaftaran dan perubahan pilihan jalur masuk<br>CPD dapat mengganti jalur
+                    pendaftaran sleama waktu ini.</li>
+                <li><b>02-03 Juli 2022</b><br>Validasi dan evaluasi ajuan pendaftaran CPD oleh sistem</li>
+                <li><b>04 Juli 2022</b><br>Pengumuman hasil PPDB melalui laman selambat-lambatnya pukul 23.55 WIB</li>
+                <li><b>05-07 Juli 2022</b><br>Daftar ulang di Satuan Pendidikan yang dituju</li>
+                <li><b>11 Juli 2022</b><br>Awal tahun ajaran baru 2022/2033</li>
+            </ul>
         </div>
     </div>
-    <div class="row">
-        <div style="flex-basis: 50%;">
+    <div class="row row-spaced">
+        <div style="flex-basis: 100%;">
             <span id="ekstra" style="position: relative; top: -100px;"></span>
             <h2 class="underlined head2">Ekstrakulikuler</h2>
             <p class="under-header">Terdapat kurang lebih 16 Ekstrakulikuler yang berada di SMK Sains Pertiwi</p>
+        </div>
+        <div style="flex-basis: 20%;">
             <ul style="padding-left: 15px; list-style-type: disc; text-align: left;">
                 <li>Paskibra</li>
                 <li>Palang Merah Remaja (PMR)</li>
@@ -138,6 +171,17 @@
                 <li>Rohis</li>
                 <li>Rohkris</li>
             </ul>
+        </div>
+        <div style="flex-basis: 20%;">
+            <img src="img/pexels-pixabay-261060.jpg" alt="" width="100%" style="border-radius: 64px 64px 0px 64px;">
+        </div>
+        <div style="flex-basis: 20%;">
+            <img src="img/pexels-artem-podrez-6253178.jpg" alt="" width="100%"
+                style="border-radius: 64px 64px 0px 64px;">
+        </div>
+        <div style="flex-basis: 20%;">
+            <img src="img/pexels-luthfi-ali-qodri-8713604.jpg" alt="" width="100%"
+                style="border-radius: 64px 64px 0px 64px;">
         </div>
     </div>
     <div class="row footer">
@@ -176,7 +220,8 @@
             </ul>
         </div>
         <div style="flex-basis: 100%;">
-            <p style="text-align: center;">Dibuat oleh <a href="kelompok1.html" style="color: #F18F01;">Kelompok 1</a> Web Programming Kelas 12.2B.31.</p>
+            <p style="text-align: center;">Dibuat oleh <a href="kelompok1.html" style="color: #F18F01;">Kelompok 1</a>
+                Web Programming Kelas 12.2B.31.</p>
         </div>
     </div>
 </body>
