--- a/program.html
+++ b/program.html
@@ -89,12 +89,12 @@
         </header>
     </div>
     <div class="row first-row" style="background: linear-gradient(to top, #030111, #ffffff00),
-    url(img/pexels-maggie-zhan-2170498.jpg) no-repeat center center;">
+    url(img/pexels-andy-barbour-6683676.jpg) no-repeat center center;">
         <div style="flex-basis: 100%;">
             <h1 class="white">Program SMK Sains Pertiwi</h1>
         </div>
     </div>
-    <div class="row">
+    <div class="row row-spaced">
         <div style="flex-basis: 100%;">
             <span id="proker" style="position: relative; top: -100px;"></span>
             <h2 class="underlined head2">Program Kerja</h2>
