--- a/profil.html
+++ b/profil.html
@@ -100,7 +100,7 @@
             <h2 class="underlined head2">Sejarah</h2>
         </div>
         <div style="flex-basis: 30%;">
-            <img src="img/pexels-idriss-meliani-2982449.jpg" alt="" style="max-width: 100%;">
+            <img src="img/pexels-idriss-meliani-2982449.jpg" alt="" style="max-width: 100%; border-radius: 64px 64px 0px 64px;">
         </div>
         <div style="flex-basis: 60%;">
             <p style="text-align: left;">SMK Sains Pertiwi merupakan salah satu Lembaga
